# sneaky-snickers

./: .gitignore  Cargo.toml  Procfile  README.md  docker-compose.yml  log4rs.yaml
analysis/: a.py  asd.py  compare.py  dashboard.py  data.json  database.py  dataset.py  debug_state.py  download_loop.sh  environment.yml  features_stats.py  game_log_stats.py  generate_zobrist_numbers.py  learning_rate.py  match.py  metrics.py  model.py  moves.py  pipeline.py  pyproject.toml  requirements.txt  rollouts.py  save_jit.py  scrape.py  scrape_games.py  settings.py  state_to_ascii.py  test.py  test_dataloader.py  train.py
analysis/game_logs/: 0  1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  124  125  126  127  128  129  13  130  131  132  133  (+526 more)
analysis/weights/: main.pt
arena/: .gitignore  arena.py  config.json  config.jsonnet  draw_ratings.py  print_winrates.py  requirements.txt  winrates.json
arena/rules/: go.mod  wrapped_spiral.go
arena/rules/cli/commands/: play.go
balalaika/: Cargo.toml  README.md  log4rs.yaml  pyproject.toml
balalaika/benches/: benchmark.rs
balalaika/src/: api.rs  array2d.rs  board_generator.rs  dataloader.rs  engine.rs  features.rs  game.rs  game_log.rs  lib.rs  nnue.rs  python_module.rs  test_utils.rs  vec2d.rs  zobrist.rs
balalaika/src/debug_data/: one_turn_to_win.json  suicide_move.json  suicide_up.json
balalaika/src/debug_data/suicide2/: turn1.json  turn2.json
balalaika/src/features/: base.rs  collector.rs  composite.rs  examples.rs  flood_fill.rs  global_metrics.rs  mod.rs  snakes_metrics.rs
balalaika/src/mcts/: bandit.rs  config.rs  mod.rs  search.rs  solver.rs  utils.rs
balalaika/src/mcts/heuristics/: flood_fill.rs  mod.rs
balalaika/src/mcts/parallel/: config.rs  mcts.rs  mod.rs  wu_uct.rs
balalaika/src/mcts/seq/: config.rs  mcts.rs  ucb.rs
balalaika/src/mcts/seq_nnue/: config.rs  mcts.rs  mod.rs  ucb.rs
balalaika/src/test_data/: body_collision.json  food_head_to_head_equal.json  food_in_front_up_up.json  head_to_head_big_and_small.json  head_to_head_correlated_mcts.json  single_short_snake_in_the_center_left.json  single_short_snake_in_the_center_up.json  step_on_tail.json  top_right_corner.json
deploy/: 00-clone-repo.sh  01-install-requirements.sh  02-build-stage1.sh  03-record-profile.sh  04-build-stage2.sh  05-run-server.sh  arena-config.jsonnet
src/: api.rs  bandit.rs  engine.rs  features.rs  game.rs  game_log.rs  lib.rs  main.rs  mcts.rs  objects.rs  parallelization.rs  requests.rs  responses.rs  solver.rs  test_data.rs  test_utils.rs  thompson.rs  ucb.rs  vec2d.rs  zobrist.rs
src/mcts/: bandit.rs  config.rs  mod.rs  utils.rs
src/mcts/heuristics/: flood_fill.rs
src/mcts/parallel/: bu_uct.rs  config.rs  mcts.rs  mod.rs  pool.rs  wu_uct.rs
src/mcts/seq/: config.rs  mcts.rs  mod.rs  thompson.rs  ucb.rs
src/test_data/: bottom_left_corner.json  follow_tail.json  food_head_to_head_equal.json  food_head_to_head_equal_v2.json  food_in_front.json  food_in_front_up_up.json  head_to_head_out_of_health.json  single_short_snake_in_the_center.json  single_short_snake_in_the_center_left.json  single_short_snake_in_the_center_right.json  single_short_snake_in_the_center_up.json
