[package]
name = "sneaky-snickers"
version = "0.1.0"
authors = ["pymole <goglbummm@gmail.com>", "dimin <demindf@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = {version = "1.0.126", features = ["derive"]}
log4rs = "1.0.0"
log = "0.4.14"
rand = "0.8.4"
arrayvec = "0.7.1"
