[package]
name = "sneaky-snickers"
version = "0.1.0"
authors = ["pymole <goglbummm@gmail.com>", "dimin <demindf@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = {version = "1.0.136", features = ["derive"]}
log4rs = "1.0.0"
log = "0.4.14"
rand = "0.8.5"
arrayvec = "0.7.2"
statrs = "0.15.0"
cfg-if = "0.1"
lazy_static = "1.4.0"

[features]
default = ["ucb"]
ucb = []
ts = []