[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Shevela Roman <goglbummm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
balalaika = { path = "../balalaika/" }
pymongo = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
