[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Shevela Roman <goglbummm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
balalaika = { path = "../balalaika/" }
pymongo = "^4.3.2"
numpy = "^1.23.4"
xgboost = "^1.7.1"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
