[package]
name = "balalaika"
version = "0.1.0"
authors = ["pymole <goglbummm@gmail.com>", "dimin <demindf@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[profile.bench]
debug = true

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.7"
dashmap = "5.2.0"
log4rs = "1.0.0"
log = "0.4.14"
rand = "0.8.5"
arrayvec = { version = "0.7.2", features = ["serde"] }
statrs = "0.15.0"
cfg-if = "0.1"
num_cpus = "1.13.1"
crossbeam-channel = "0.5.2"
spin = "0.9.2"
bitvec = { version = "1.0.1", features = ["serde"] }
mongodb = { version = "2.3.1", default-features = false, features = ["sync"] }
pyo3 = { version = "0.17.3", features = ["extension-module", "serde"] }
pythonize = "0.17.0"
colored = "2.0.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default = ["ucb", "seq"]
ucb = []
ts = []
seq = []
par = []
python = []